--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-fileupload": "^1.1.6-alpha.6",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.17.0",
+        "fs": "0.0.1-security",
         "mongoose": "^5.7.7"
     }
 }
