--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-handlebars": "^3.1.0",
         "express-session": "^1.17.0",
         "fs": "0.0.1-security",
+        "lightbox2": "^2.11.1",
         "mongoose": "^5.7.7"
     }
 }
